// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toast > Toast.vue should renders OXD Toast 1`] = `
<div class="oxd-toast oxd-toast--default" aria-live="assertive">
  <div class="oxd-toast-start">
    <div class="oxd-toast-icon-container">
      <div class="oxd-toast-icon-wrap oxd-toast-icon-wrap--default"><i class="oxd-icon oxd-icon--medium bi-star oxd-toast-icon d-flex align-center"></i></div>
    </div>
    <div class="oxd-toast-content oxd-toast-content--default">
      <p class="oxd-text oxd-text--p oxd-text--toast-title oxd-toast-content-text">Test Toast</p>
      <p class="oxd-text oxd-text--p oxd-text--toast-message oxd-toast-content-text"></p>
    </div>
  </div>
  <div class="oxd-toast-close-container">
    <div class="oxd-toast-close oxd-toast-close--default" role="button"> × </div>
  </div>
</div>
`;

exports[`Toast > Toast.vue should renders OXD Toast error 1`] = `
<div class="oxd-toast oxd-toast--error" aria-live="assertive">
  <div class="oxd-toast-start">
    <div class="oxd-toast-icon-container">
      <div class="oxd-toast-icon-wrap oxd-toast-icon-wrap--error"><i class="oxd-icon oxd-icon--medium bi-exclamation-circle oxd-toast-icon d-flex align-center"></i></div>
    </div>
    <div class="oxd-toast-content oxd-toast-content--error">
      <p class="oxd-text oxd-text--p oxd-text--toast-title oxd-toast-content-text">Test Toast</p>
      <p class="oxd-text oxd-text--p oxd-text--toast-message oxd-toast-content-text"></p>
    </div>
  </div>
  <div class="oxd-toast-close-container">
    <div class="oxd-toast-close oxd-toast-close--error" role="button"> × </div>
  </div>
</div>
`;

exports[`Toast > Toast.vue should renders OXD Toast info 1`] = `
<div class="oxd-toast oxd-toast--info" aria-live="assertive">
  <div class="oxd-toast-start">
    <div class="oxd-toast-icon-container">
      <div class="oxd-toast-icon-wrap oxd-toast-icon-wrap--info"><i class="oxd-icon oxd-icon--medium bi-info-circle oxd-toast-icon d-flex align-center"></i></div>
    </div>
    <div class="oxd-toast-content oxd-toast-content--info">
      <p class="oxd-text oxd-text--p oxd-text--toast-title oxd-toast-content-text">Test Toast</p>
      <p class="oxd-text oxd-text--p oxd-text--toast-message oxd-toast-content-text"></p>
    </div>
  </div>
  <div class="oxd-toast-close-container">
    <div class="oxd-toast-close oxd-toast-close--info" role="button"> × </div>
  </div>
</div>
`;

exports[`Toast > Toast.vue should renders OXD Toast success 1`] = `
<div class="oxd-toast oxd-toast--success" aria-live="assertive">
  <div class="oxd-toast-start">
    <div class="oxd-toast-icon-container">
      <div class="oxd-toast-icon-wrap oxd-toast-icon-wrap--success"><i class="oxd-icon oxd-icon--medium bi-check2 oxd-toast-icon d-flex align-center"></i></div>
    </div>
    <div class="oxd-toast-content oxd-toast-content--success">
      <p class="oxd-text oxd-text--p oxd-text--toast-title oxd-toast-content-text">Test Toast</p>
      <p class="oxd-text oxd-text--p oxd-text--toast-message oxd-toast-content-text"></p>
    </div>
  </div>
  <div class="oxd-toast-close-container">
    <div class="oxd-toast-close oxd-toast-close--success" role="button"> × </div>
  </div>
</div>
`;

exports[`Toast > Toast.vue should renders OXD Toast warn 1`] = `
<div class="oxd-toast oxd-toast--warn" aria-live="assertive">
  <div class="oxd-toast-start">
    <div class="oxd-toast-icon-container">
      <div class="oxd-toast-icon-wrap oxd-toast-icon-wrap--warn"><i class="oxd-icon oxd-icon--medium bi-exclamation-triangle oxd-toast-icon d-flex align-center"></i></div>
    </div>
    <div class="oxd-toast-content oxd-toast-content--warn">
      <p class="oxd-text oxd-text--p oxd-text--toast-title oxd-toast-content-text">Test Toast</p>
      <p class="oxd-text oxd-text--p oxd-text--toast-message oxd-toast-content-text"></p>
    </div>
  </div>
  <div class="oxd-toast-close-container">
    <div class="oxd-toast-close oxd-toast-close--warn" role="button"> × </div>
  </div>
</div>
`;
